Downgraded java version to 17